--- a/src/impl/js/proto/package.json
+++ b/src/impl/js/proto/package.json
@@ -16,6 +16,7 @@
     "cookie-parser": "~1.4.1",
     "debug": "~2.2.0",
     "express": "~4.13.4",
+    "http": "~0.0.0",
     "lokijs": "^1.3.19",
     "morgan": "~1.7.0",
     "protobufjs": "^5.0.1",
