--- a/GPCCHS_D_SVR/src/impl/js/server/package.json
+++ b/GPCCHS_D_SVR/src/impl/js/server/package.json
@@ -13,7 +13,9 @@
     "express": "~4.13.4",
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
+    "protobufjs": "^5.0.1",
     "serve-favicon": "~2.3.0",
+    "socket.io": "^1.4.8",
     "zmq": "^2.15.3"
   },
   "devDependencies": {
