--- a/GPCCHS_E_CLT/src/impl/js/client/package.json
+++ b/GPCCHS_E_CLT/src/impl/js/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lpisis/gpcchs_e_clt",
+  "name": "lpisis_gpcchs_e_clt",
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
