[FT:#3622] Implement a websocket client wrapper in client

--- a/GPCCHS_E_CLT/src/impl/js/client/package.json
+++ b/GPCCHS_E_CLT/src/impl/js/client/package.json
@@ -83,6 +83,7 @@
   "dependencies": {
     "bootstrap": "^3.3.6",
     "css-modules-require-hook": "^4.0.0",
+    "debug": "^2.2.0",
     "electron-debug": "^1.0.1",
     "font-awesome": "^4.6.3",
     "lodash": "^4.13.1",
@@ -95,6 +96,7 @@
     "redux": "^3.5.2",
     "redux-electron-store": "^0.3.11",
     "redux-thunk": "^2.1.0",
+    "socket.io-client": "^1.4.8",
     "source-map-support": "^0.4.0"
   },
   "devEngines": {
