--- a/GPCCHS_E_CLT/src/impl/js/client/package.json
+++ b/GPCCHS_E_CLT/src/impl/js/client/package.json
@@ -92,6 +92,7 @@
     "react-bootstrap": "^0.29.5",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
+    "react-stockcharts": "^0.4.0",
     "react-tabs-redux": "^1.2.2",
     "redux": "^3.5.2",
     "redux-electron-store": "^0.3.11",
