--- a/GPCCHS_E_CLT/src/impl/js/client/package.json
+++ b/GPCCHS_E_CLT/src/impl/js/client/package.json
@@ -86,6 +86,7 @@
     "debug": "^2.2.0",
     "electron-debug": "^1.0.1",
     "font-awesome": "^4.6.3",
+    "immutable": "^3.8.1",
     "lodash": "^4.13.1",
     "postcss": "^5.0.21",
     "react": "v0.14.8",
