[FT:#3622] Create route tests for /subscriptions

--- a/GPCCHS_D_SVR/src/impl/js/server/.vscode/launch.json
+++ b/GPCCHS_D_SVR/src/impl/js/server/.vscode/launch.json
@@ -34,6 +34,7 @@
             "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/mocha",
             "runtimeArgs": [             
                 "test",
+                "--recursive",
                 "--nolazy"
             ],
             "env": {
