--- a/GPCCHS_D_SVR/src/impl/js/server/package.json
+++ b/GPCCHS_D_SVR/src/impl/js/server/package.json
@@ -21,6 +21,7 @@
     "start-stub-info": "concurrently \"npm run info-all npm run gpccdc-stub\" \"npm run start-info\" \"npm run info-all npm run send-sub-stub\""
   },
   "dependencies": {
+    "ajv": "^4.3.0",
     "body-parser": "~1.15.1",
     "chai-properties": "^1.2.1",
     "cookie-parser": "~1.4.3",
