--- a/GPCCHS_E_CLT/src/impl/js/client/package.json
+++ b/GPCCHS_E_CLT/src/impl/js/client/package.json
@@ -91,7 +91,8 @@
     "react-bootstrap": "^0.29.5",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
-    "react-stockcharts": "^0.4.0",
+    "react-stockcharts": "^0.5.0",
+    "react-tabs-redux": "^1.2.2",
     "redux": "^3.5.2",
     "redux-electron-store": "^0.3.11",
     "redux-thunk": "^2.1.0",
