--- a/GPCCHS_D_SVR/src/impl/js/server/package.json
+++ b/GPCCHS_D_SVR/src/impl/js/server/package.json
@@ -26,6 +26,7 @@
     "chai-properties": "^1.2.1",
     "cookie-parser": "~1.4.3",
     "debug": "^2.2.0",
+    "dotenv-safe": "^2.3.1",
     "express": "~4.13.4",
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
