--- a/GPCCHS_D_SVR/src/impl/js/server/package.json
+++ b/GPCCHS_D_SVR/src/impl/js/server/package.json
@@ -1,56 +1,41 @@
 {
-  "name": "server",
-  "version": "0.0.0",
+  "name": "gpcchs_d_svr",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "info": "LEVEL='INFO'",
-    "debug": "LEVEL='DEBUG'",
-    "verbose": "LEVEL='VERBOSE'",
-    "info-all": "DEBUG='gpcchs_d_svr:server:*' npm run info",
-    "debug-all": "DEBUG='gpcchs_d_svr:server:*' npm run debug",
-    "verbose-all": "DEBUG='gpcchs_d_svr:server:*' npm run verbose",
     "start": "node --max_old_space_size=8000 ./bin/www",
-    "start-info": "npm run info-all npm run start",
-    "start-debug": "npm run debug-all npm run start",
-    "start-verbose": "npm run verbose-all npm run start",
     "test": "node_modules/.bin/mocha test --recursive",
     "test-perf": "node --max_old_space_size=5120 test-perf/loki.js",
     "gpccdc-stub": "node stub/gpccdc.js --periodicity 10 --timestep 600000",
     "send-sub-stub": "node stub/sendSubscriptions.js --delay 5000",
-    "start-stub": "concurrently \"npm run info-all npm run gpccdc-stub\" \"npm run start-info\"",
-    "start-stub-sub": "concurrently \"npm run info-all npm run gpccdc-stub\" \"npm run start-info\" \"npm run info-all npm run send-sub-stub\""
+    "start-stub": "concurrently --kill-others \"npm run gpccdc-stub\" \"npm run start\"",
+    "start-stub-sub": "concurrently --kill-others \"npm run gpccdc-stub\" \"npm run start\" \"npm run send-sub-stub\""
   },
   "dependencies": {
     "ajv": "^4.3.0",
     "async": "^2.0.1",
     "body-parser": "~1.15.1",
-    "chai-properties": "^1.2.1",
-    "cookie-parser": "~1.4.3",
     "debug": "^2.2.0",
     "dotenv-safe": "^2.3.1",
     "exit": "^0.1.2",
-    "express": "~4.13.4",
-    "jade": "~1.11.0",
+    "express": "4.14.0",
+    "lokijs": "^1.4.1",
     "morgan": "~1.7.0",
     "protobufjs": "^5.0.1",
-    "serve-favicon": "~2.3.0",
     "socket.io": "^1.4.8",
-    "supertest": "^1.2.0",
     "zmq": "^2.15.3"
   },
   "devDependencies": {
-    "atom-linter": "^7.0.0",
     "chai": "^3.5.0",
-    "chi": "0.0.10",
+    "chai-properties": "^1.2.1",
     "concurrently": "^2.2.0",
-    "eslint": "^3.0.1",
-    "eslint-config-airbnb": "^9.0.1",
+    "eslint": "3.3.1",
+    "eslint-config-airbnb": "10.0.1",
     "eslint-plugin-import": "^1.10.2",
-    "eslint-plugin-jsx-a11y": "^1.5.5",
-    "eslint-plugin-react": "^5.2.2",
-    "exec": "^0.2.1",
-    "lokijs": "^1.4.1",
+    "eslint-plugin-jsx-a11y": "2.1.0",
+    "eslint-plugin-react": "6.1.2",
     "minimist": "^1.2.0",
-    "mocha": "^2.5.3"
+    "mocha": "3.0.2",
+    "supertest": "2.0.0"
   }
 }
