[FT:#3622] Fix mocha and tests launching command and configuration

--- a/GPCCHS_D_SVR/src/impl/js/server/.eslintrc
+++ b/GPCCHS_D_SVR/src/impl/js/server/.eslintrc
@@ -1,3 +1,12 @@
 {
-    "extends": "airbnb"
+    "extends": "airbnb",
+    "globals": {
+      "describe": true,
+      "it": true,
+      "expect": true,
+      "before": true,
+      "after": true,
+      "beforeEach": true,
+      "afterEach": true
+    }
 }
