--- a/GPCCHS_D_SVR/src/impl/js/server/package.json
+++ b/GPCCHS_D_SVR/src/impl/js/server/package.json
@@ -19,6 +19,7 @@
     "dotenv-safe": "^2.3.1",
     "exit": "^0.1.2",
     "express": "4.14.0",
+    "lodash": "^4.15.0",
     "lokijs": "^1.4.1",
     "morgan": "~1.7.0",
     "protobufjs": "^5.0.1",
