--- a/GPCCHS_D_SVR/src/impl/js/server/package.json
+++ b/GPCCHS_D_SVR/src/impl/js/server/package.json
@@ -22,6 +22,7 @@
     "lodash": "^4.15.0",
     "lokijs": "^1.4.1",
     "morgan": "~1.7.0",
+    "node-uuid": "^1.4.7",
     "protobufjs": "^5.0.1",
     "socket.io": "^1.4.8",
     "zmq": "^2.15.3"
