[FT:#3622] Refactoring HSS launching procedure to be synchronous and make things more readable

--- a/GPCCHS_D_SVR/src/impl/js/server/.env.example
+++ b/GPCCHS_D_SVR/src/impl/js/server/.env.example
@@ -1,6 +1,9 @@
-NODE_ENV=
-PORT=
-HTTP_LOGS=
-ZMQ_GPCCDCPUSH=
-ZMQ_GPCCDCPULL=
-ZMQ_TIMELINE=
+NODE_ENV=development
+DEBUG=GPCCHS:*
+LEVEL=DEBUG
+HTTP_LOGS=1
+PORT=3000
+ZMQ_GPCCDC_PUSH=tcp://127.0.0.1:4000
+ZMQ_GPCCDC_REALTIME=tcp://127.0.0.1:4090
+ZMQ_GPCCDC_ARCHIVE=tcp://127.0.0.1:4091
+ZMQ_VIMA_TIMEBAR=tcp://127.0.0.1:4050
