--- a/GPCCHS_D_SVR/src/impl/js/server/package.json
+++ b/GPCCHS_D_SVR/src/impl/js/server/package.json
@@ -15,6 +15,7 @@
     "ajv": "^4.3.0",
     "async": "^2.0.1",
     "body-parser": "~1.15.1",
+    "bytebuffer": "^5.0.1",
     "debug": "^2.2.0",
     "dotenv-safe": "^2.3.1",
     "exit": "^0.1.2",
