[FT:#3622] Minor JSCS configuration file fix

--- a/GPCCHS_D_SVR/src/impl/js/server/config.jscs.json
+++ b/GPCCHS_D_SVR/src/impl/js/server/config.jscs.json
@@ -67,9 +67,7 @@
         "catch",
         "typeof"
     ],
-    "requirePaddingNewLinesBeforeLineComments": {
-        "allExcept": "firstAfterCurly"
-    },
+    "requirePaddingNewLinesBeforeLineComments": false,
     "requirePaddingNewLinesAfterBlocks": false,
     "requireSemicolons": true,
     "requireShorthandArrowFunctions": true,
