[FT:#3622] Implement an in-process DC stub that emulate realtime subscription and archive data query

--- a/GPCCHS_D_SVR/src/impl/js/server/.env.example
+++ b/GPCCHS_D_SVR/src/impl/js/server/.env.example
@@ -3,7 +3,8 @@ DEBUG=GPCCHS:*
 LEVEL=DEBUG
 HTTP_LOGS=1
 PORT=3000
-ZMQ_GPCCDC_PUSH=tcp://127.0.0.1:4000
+ZMQ_GPCCDC_REQ=tcp://127.0.0.1:4000
 ZMQ_GPCCDC_REALTIME=tcp://127.0.0.1:4090
 ZMQ_GPCCDC_ARCHIVE=tcp://127.0.0.1:4091
 ZMQ_VIMA_TIMEBAR=tcp://127.0.0.1:4050
+STUB_DC_ON=off
