--- a/GPCCHS_D_SVR/src/impl/js/server/.env.example
+++ b/GPCCHS_D_SVR/src/impl/js/server/.env.example
@@ -4,7 +4,6 @@ LEVEL=DEBUG
 HTTP_LOGS=1
 PORT=3000
 ZMQ_GPCCDC_REQ=tcp://127.0.0.1:4000
-ZMQ_GPCCDC_REALTIME=tcp://127.0.0.1:4090
-ZMQ_GPCCDC_ARCHIVE=tcp://127.0.0.1:4091
+ZMQ_GPCCDC_DATA=tcp://127.0.0.1:4090
 ZMQ_VIMA_TIMEBAR=tcp://127.0.0.1:4050
 STUB_DC_ON=off
