--- a/GPCCHS_D_SVR/src/impl/js/server/package.json
+++ b/GPCCHS_D_SVR/src/impl/js/server/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node --max_old_space_size=8000 index",
-    "test": "node_modules/.bin/mocha",
+    "test": "mocha \"lib/**/*.spec.js\"",
     "test-perf": "node --max_old_space_size=5120 test-perf/loki.js",
     "send-sub-stub": "node stub/sendSubscriptions.js --delay 5000"
   },
