--- a/GPCCHS_D_SVR/src/pom.xml
+++ b/GPCCHS_D_SVR/src/pom.xml
@@ -26,86 +26,103 @@
         <dependency>
             <groupId>fr.cnes.lpisis.cots</groupId>
             <artifactId>exit</artifactId>
+        	<version>0.1.2</version>
             <type>isis-cots</type>
         </dependency>
         <dependency>
             <groupId>fr.cnes.lpisis.cots</groupId>
             <artifactId>async</artifactId>
+        	<version>2.0.1</version>
             <type>isis-cots</type>
         </dependency>
         <dependency>
             <groupId>fr.cnes.lpisis.cots</groupId>
             <artifactId>ajv</artifactId>
+        	<version>4.3.0</version>
             <type>isis-cots</type>
         </dependency>
         <dependency>
-            <groupId></groupId>
+            <groupId>fr.cnes.lpisis.cots</groupId>
             <artifactId>body-parser</artifactId>
+        	<version>1.15.1</version>
             <type>isis-cots</type>
         </dependency>
         <dependency>
             <groupId>fr.cnes.lpisis.cots</groupId>
             <artifactId>bytebuffer</artifactId>
+        	<version>5.0.1</version>
             <type>isis-cots</type>
         </dependency>
         <dependency>
             <groupId>fr.cnes.lpisis.cots</groupId>
             <artifactId>debug</artifactId>
+        	<version>2.2.0</version>
             <type>isis-cots</type>
         </dependency>
         <dependency>
             <groupId>fr.cnes.lpisis.cots</groupId>
             <artifactId>deep-diff</artifactId>
+        	<version>0.3.4</version>
             <type>isis-cots</type>
         </dependency>
         <dependency>
             <groupId>fr.cnes.lpisis.cots</groupId>
             <artifactId>dotenv-safe</artifactId>
+        	<version>2.3.1</version>
             <type>isis-cots</type>
         </dependency>
         <dependency>
             <groupId>fr.cnes.lpisis.cots</groupId>
             <artifactId>express</artifactId>
+        	<version>4.14.0</version>
             <type>isis-cots</type>
         </dependency>
         <dependency>
             <groupId>fr.cnes.lpisis.cots</groupId>
             <artifactId>lodash</artifactId>
+        	<version>4.15.0</version>
             <type>isis-cots</type>
         </dependency>
         <dependency>
             <groupId>fr.cnes.lpisis.cots</groupId>
             <artifactId>lokijs</artifactId>
+        	<version>1.4.1</version>
             <type>isis-cots</type>
         </dependency>
         <dependency>
             <groupId>fr.cnes.lpisis.cots</groupId>
             <artifactId>morgan</artifactId>
+        	<version>1.7.0</version>
             <type>isis-cots</type>
         </dependency>
         <dependency>
             <groupId>fr.cnes.lpisis.cots</groupId>
             <artifactId>node-uuid</artifactId>
+        	<version>1.4.7</version>
             <type>isis-cots</type>
         </dependency>
         <dependency>
             <groupId>fr.cnes.lpisis.cots</groupId>
             <artifactId>primus</artifactId>
+        	<version>6.0.2</version>
             <type>isis-cots</type>
         </dependency>
         <dependency>
             <groupId>fr.cnes.lpisis.cots</groupId>
             <artifactId>protobufjs</artifactId>
+        	<version>5.0.1</version>
             <type>isis-cots</type>
         </dependency>
         <dependency>
             <groupId>fr.cnes.lpisis.cots</groupId>
             <artifactId>uws</artifactId>
+        	<version>0.8.0</version>
             <type>isis-cots</type>
         </dependency>
         <dependency>
             <groupId>fr.cnes.lpisis.cots</groupId>
             <artifactId>zmq</artifactId>
+        	<version>2.15.3</version>
             <type>isis-cots</type>
         </dependency>
 
