--- a/GPCCHS_E_CLT/src/impl/js/client/.babelrc
+++ b/GPCCHS_E_CLT/src/impl/js/client/.babelrc
@@ -1,21 +1,35 @@
 {
-  "presets": ["es2015", "stage-0", "react"],
-  "plugins": ["add-module-exports"],
+  "presets": [
+    "es2015",
+    "stage-0",
+    "react"
+  ],
+  "plugins": [
+    "add-module-exports"
+  ],
   "env": {
-  	"production": {
-  		"presets": ["react-optimize"],
-  		"plugins": [
-  			"baebel-plugin-transform-remove-console",
-  			"babel-plugin-transform-remove-debugger",
-  			"babel-plugin-dev-expression"
-  		]
-  	},
+    "production": {
+      "presets": [
+        "react-optimize"
+      ],
+      "plugins": [
+        "babel-plugin-dev-expression"
+      ]
+    },
     "development": {
-      "presets": ["react-hmre"]
+      "presets": [
+        "react-hmre"
+      ]
     },
     "test": {
       "plugins": [
-        ["webpack-loaders", { "config": "webpack.config.node.js", "verbose": false }]
+        [
+          "webpack-loaders",
+          {
+            "config": "webpack.config.node.js",
+            "verbose": false
+          }
+        ]
       ]
     }
   }
