--- a/GPCCHS_D_SVR/src/server/src/impl/js/server/package.json
+++ b/GPCCHS_D_SVR/src/server/src/impl/js/server/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
+    "build-primus-client": "node ./bin/buildPrimusClient",
     "start": "node --max_old_space_size=8000 index",
     "test": "mocha \"lib/**/*.spec.js\"",
     "test-perf": "node --max_old_space_size=5120 test-perf/loki.js",
@@ -22,9 +23,9 @@
     "lokijs": "^1.4.1",
     "morgan": "~1.7.0",
     "node-uuid": "^1.4.7",
-    "primus": "^6.0.2",
+    "primus": "^6.0.3",
     "protobufjs": "^5.0.1",
-    "uws": "^0.8.0",
+    "uws": "^0.9.0",
     "zmq": "^2.15.3"
   },
   "devDependencies": {
