--- a/GPCCHS_E_CLT/src/client/src/impl/js/client/.env.example
+++ b/GPCCHS_E_CLT/src/client/src/impl/js/client/.env.example
@@ -2,3 +2,5 @@ PORT=3100
 HSS=http://127.0.0.1:3000
 DEBUG=GPCCHS:*
 LEVEL=DEBUG
+FMD_ROOT=/data/work/gitRepositories/LPISIS/GPCCHS/GPCCHS_D_SVR/src/server/src/impl/js/server/data
+
