--- a/GPCCHS_D_SVR/src/server/src/impl/js/server/.env.example
+++ b/GPCCHS_D_SVR/src/server/src/impl/js/server/.env.example
@@ -3,8 +3,8 @@ DEBUG=GPCCHS:*
 LEVEL=DEBUG
 HTTP_LOGS=1
 PORT=3000
-ZMQ_GPCCDC_REQ=tcp://127.0.0.1:4000
-ZMQ_GPCCDC_DATA=tcp://127.0.0.1:4090
+ZMQ_GPCCDC_PUSH=tcp://127.0.0.1:4000
+ZMQ_GPCCDC_PULL=tcp://127.0.0.1:4090
 ZMQ_VIMA_TIMEBAR=tcp://127.0.0.1:4050
 ZMQ_VIMA_STUB_TIMEBAR=tcp://127.0.0.1:4060
 STUB_DC_ON=off
