[FT:#3622] Move folder schemaManager from server to client

--- a/GPCCHS_E_CLT/src/client/src/impl/js/client/package.json
+++ b/GPCCHS_E_CLT/src/client/src/impl/js/client/package.json
@@ -78,6 +78,7 @@
     "webpack-merge": "^0.14.1"
   },
   "dependencies": {
+    "ajv": "^4.7.0",
     "bootstrap": "^3.3.6",
     "chai-properties": "^1.2.1",
     "css-modules-require-hook": "^4.0.2",
