--- a/GPCCHS_E_CLT/src/client/src/impl/js/client/package.json
+++ b/GPCCHS_E_CLT/src/client/src/impl/js/client/package.json
@@ -87,6 +87,9 @@
     "electron-debug": "^1.0.1",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.13.1",
+    "react-color": "^2.2.2",
+    "react-colorpicker": "^0.3.14",
+    "react-select": "^1.0.0-beta14",
     "node-uuid": "^1.4.7",
     "postcss": "^5.1.2",
     "react": "^15.3.1",
@@ -106,5 +109,6 @@
   "devEngines": {
     "node": "6.x",
     "npm": "3.x"
-  }
+  },
+  "style": "./app/app.global.css"
 }
