--- a/GPCCHS_D_SVR/src/server/src/impl/js/server/package.json
+++ b/GPCCHS_D_SVR/src/server/src/impl/js/server/package.json
@@ -10,7 +10,7 @@
     "send-sub-stub": "node stub/sendSubscriptions.js --delay 5000"
   },
   "dependencies": {
-    "ajv": "^4.3.0",
+    "ajv": "^4.7.0",
     "async": "^2.0.1",
     "body-parser": "~1.15.1",
     "bytebuffer": "^5.0.1",
@@ -32,13 +32,13 @@
     "chai": "^3.5.0",
     "chai-properties": "^1.2.1",
     "concurrently": "^2.2.0",
-    "eslint": "3.3.1",
-    "eslint-config-airbnb": "10.0.1",
-    "eslint-plugin-import": "^1.10.2",
-    "eslint-plugin-jsx-a11y": "2.1.0",
-    "eslint-plugin-react": "6.1.2",
+    "eslint": "^3.5.0",
+    "eslint-config-airbnb": "^11.1.0",
+    "eslint-plugin-import": "^1.15.0",
+    "eslint-plugin-jsx-a11y": "^2.2.2",
+    "eslint-plugin-react": "^6.2.2",
     "minimist": "^1.2.0",
-    "mocha": "3.0.2",
-    "supertest": "2.0.0"
+    "mocha": "^3.0.2",
+    "supertest": "^2.0.0"
   }
 }
