--- a/GPCCHS_E_CLT/src/client/pom.xml
+++ b/GPCCHS_E_CLT/src/client/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>fr.cnes.lpisis.gpcc</groupId>
         <artifactId>gpcc-parent</artifactId>
-        <version>1.1.0-R7S2-SNAPSHOT</version>
+        <version>1.1.0-R7S1-SNAPSHOT</version>
         <relativePath />
     </parent>
     
@@ -69,12 +69,6 @@
             <groupId>fr.cnes.lpisis.cots</groupId>
             <artifactId>postcss</artifactId>
         	<version>5.1.2</version>
-            <type>isis-cots</type>
-        </dependency>
-        <dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>primus</artifactId>
-        	<version>6.0.2</version>
             <type>isis-cots</type>
         </dependency>
         <dependency>
@@ -139,12 +133,6 @@
         </dependency>
         <dependency>
             <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>uws</artifactId>
-        	<version>0.8.0</version>
-            <type>isis-cots</type>
-        </dependency>
-        <dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
             <artifactId>ajv</artifactId>
         	<version>4.3.0</version>
             <type>isis-cots</type>
@@ -189,6 +177,12 @@
             <groupId>fr.cnes.lpisis.cots</groupId>
             <artifactId>updeep</artifactId>
         	<version>0.16.1</version>
+            <type>isis-cots</type>
+        </dependency>
+        <dependency>
+            <groupId>fr.cnes.lpisis.cots</groupId>
+            <artifactId>ws</artifactId>
+        	<version>1.1.1</version>
             <type>isis-cots</type>
         </dependency>
     </dependencies>
