--- a/GPCCHS_E_CLT/src/client/src/impl/js/client/package.json
+++ b/GPCCHS_E_CLT/src/client/src/impl/js/client/package.json
@@ -85,6 +85,7 @@
     "chai-properties": "^1.2.1",
     "css-modules-require-hook": "^4.0.2",
     "debug": "^2.2.0",
+    "deep-diff": "^0.3.4",
     "dotenv-safe": "^2.3.1",
     "electron-debug": "^1.0.1",
     "isomorphic-fetch": "^2.2.1",
