[HL] improve monitoring and register peaks in time consumption

--- a/GPCCHS_D_SVR/src/server/src/impl/js/server/.env.example
+++ b/GPCCHS_D_SVR/src/server/src/impl/js/server/.env.example
@@ -10,3 +10,4 @@ ZMQ_VIMA_TIMEBAR_INIT=tcp://127.0.0.1:5000
 ZMQ_VIMA_STUB_TIMEBAR=tcp://127.0.0.1:4060
 STUB_DC_ON=off
 STUB_TB_ON=off
+MONITORING=off
