--- a/GPCCHS_E_CLT/src/client/src/impl/js/client/package.json
+++ b/GPCCHS_E_CLT/src/client/src/impl/js/client/package.json
@@ -91,13 +91,20 @@
     "react-color": "^2.3.2",
     "react-colorpicker": "^0.3.14",
     "react-select": "^1.0.0-rc.2",
+    "lodash": "^4.13.1",
     "node-uuid": "^1.4.7",
     "postcss": "^5.2.2",
     "react": "^15.3.2",
     "react-bootstrap": "0.30.3",
     "react-dom": "^15.3.2",
     "react-grid-layout": "^0.13.6",
+    "react-color": "^2.2.2",
+    "react-colorpicker": "^0.3.14",
+    "react-dom": "^15.3.1",
+    "react-grid-layout": "^0.13.3",
     "react-redux": "^4.4.5",
+    "react-redux-toastr": "^3.8.5",
+    "react-select": "^1.0.0-beta14",
     "react-stockcharts": "^0.5.0",
     "react-tabs-redux": "^1.3.2",
     "redux": "^3.6.0",
