--- a/GPCCHS_E_CLT/src/client/src/impl/js/client/package.json
+++ b/GPCCHS_E_CLT/src/client/src/impl/js/client/package.json
@@ -102,6 +102,7 @@
     "redux": "^3.6.0",
     "redux-electron-store": "^0.3.13",
     "redux-thunk": "^2.1.0",
+    "reselect": "^2.5.4",
     "source-map-support": "^0.4.2",
     "updeep": "^0.16.1",
     "ws": "^1.1.1"
