[HL]Updating the loki benchmark .

--- a/GPCCHS_D_SVR/src/server/src/impl/js/server/perfTesting/package.json
+++ b/GPCCHS_D_SVR/src/server/src/impl/js/server/perfTesting/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "lokijs" : "techfort/LokiJS"
+    "async": "^2.0.1",
+    "lokijs": "techfort/LokiJS"
   }
 }
