--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
@@ -56,7 +56,7 @@
     "eslint": "^3.6.1",
     "eslint-config-airbnb": "^12.0.0",
     "eslint-import-resolver-webpack": "^0.6.0",
-    "eslint-plugin-import": "^1.16.0",
+    "eslint-plugin-import": "^2.0.1",
     "eslint-plugin-jsx-a11y": "^2.2.2",
     "eslint-plugin-react": "^6.3.0",
     "express": "^4.14.0",
@@ -94,7 +94,7 @@
     "node-uuid": "^1.4.7",
     "postcss": "^5.2.2",
     "react": "^15.3.2",
-    "react-bootstrap": "0.30.3",
+    "react-bootstrap": "^0.30.5",
     "react-dom": "^15.3.2",
     "react-grid-layout": "^0.13.6",
     "react-redux": "^4.4.5",
@@ -104,7 +104,7 @@
     "redux-thunk": "^2.1.0",
     "reselect": "^2.5.4",
     "source-map-support": "^0.4.2",
-    "updeep": "^0.16.1",
+    "updeep": "^1.0.0",
     "ws": "^1.1.1"
   },
   "devEngines": {
