[FT:#3622] creating textview window and add class property capability via babel

--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/.babelrc
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/.babelrc
@@ -13,7 +13,8 @@
         "react-optimize"
       ],
       "plugins": [
-        "babel-plugin-dev-expression"
+        "babel-plugin-dev-expression",
+				"transform-class-properties"
       ]
     },
     "development": {
