--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
@@ -36,6 +36,7 @@
     "babel-loader": "^6.2.5",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-dev-expression": "^0.2.1",
+    "babel-plugin-transform-class-properties": "^6.16.0",
     "babel-plugin-webpack-loaders": "^0.8.0",
     "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.14.0",
@@ -87,17 +88,18 @@
     "dotenv-safe": "^2.3.2",
     "electron-debug": "^1.0.1",
     "lodash": "^4.16.2",
-    "react-color": "^2.3.2",
-    "react-colorpicker": "^0.3.14",
-    "react-select": "^1.0.0-rc.2",
-    "react-sizeme": "^2.2.0",
+    "mustache": "^2.2.1",
     "node-uuid": "^1.4.7",
     "postcss": "^5.2.2",
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.5",
+    "react-color": "^2.3.2",
+    "react-colorpicker": "^0.3.14",
     "react-dom": "^15.3.2",
     "react-grid-layout": "^0.13.6",
     "react-redux": "^4.4.5",
+    "react-select": "^1.0.0-rc.2",
+    "react-sizeme": "^2.2.0",
     "react-stockcharts": "^0.5.0",
     "redux": "^3.6.0",
     "redux-electron-store": "^0.3.13",
