--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/.eslintrc
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/.eslintrc
@@ -15,7 +15,8 @@
     "react/jsx-no-bind": 0,
     "react/jsx-filename-extension": [2, { "extensions": [".js", ".jsx"] }],
     "react/prefer-stateless-function": 0,
-    "generator-star-spacing": 0
+    "generator-star-spacing": 0,
+    "react/forbid-prop-types": 0,
   },
   "plugins": [
     "import",
