--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/.env.example
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/.env.example
@@ -3,4 +3,4 @@ HSS=http://127.0.0.1:3000
 DEBUG=GPCCHS:*
 LEVEL=DEBUG
 FMD_ROOT=/data/work/gitRepositories/LPISIS/GPCCHS/GPCCHS_E_VIS/src/client/src/impl/js/client/data
-OPEN=medium.workspace.json
+OPEN=small.workspace.json
