--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
@@ -102,6 +102,7 @@
     "react-select": "^1.0.0-rc.2",
     "react-sizeme": "^2.2.0",
     "react-stockcharts": "^0.6.0-beta.2",
+    "react-throttle-render": "^1.2.1",
     "redux": "^3.6.0",
     "redux-electron-store": "^0.3.13",
     "redux-thunk": "^2.1.0",
