--- a/GPCCHS_E_VIS/src/common/src/impl/js/common/package.json
+++ b/GPCCHS_E_VIS/src/common/src/impl/js/common/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "dotenv-safe": "^2.3.2",
-    "lodash": "^4.16.2"
+    "lodash": "^4.16.2",
+    "ws": "^1.1.1"
   },
   "devDependencies": {
     "babel-core": "^6.14.0",
