[HL] Introduce profiling helper on client

--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/.env.example
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/.env.example
@@ -4,3 +4,4 @@ DEBUG=GPCCHS:*
 LEVEL=DEBUG
 FMD_ROOT=/data/work/gitRepositories/LPISIS/GPCCHS/GPCCHS_E_VIS/src/client/src/impl/js/client/data
 OPEN=small.workspace.json
+PROFILING=off
