--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>fr.cnes.lpisis.gpcc</groupId>
-  <artifactId>gpcchs_l_tbr_builder</artifactId>
+  <artifactId>gpcchs_builder</artifactId>
   <packaging>pom</packaging>
   <version>1.1.0-R7S2-SNAPSHOT</version>
   <name>${project.groupId}.${project.artifactId}</name>
@@ -13,7 +13,8 @@
     <relativePath/>
   </parent>
   <modules>
-    <module>src</module>
+    <module>GPCCHS_E_VIS</module>
+    <module>GPCCHS_L_TBR</module>
   </modules>
   <build>
     <plugins>
