--- a/GPCCHS_E_VIS/src/client/pom.xml
+++ b/GPCCHS_E_VIS/src/client/pom.xml
@@ -83,16 +83,64 @@
         	<version>4.16.2</version>
             <type>isis-cots</type>
         </dependency>
+	<dependency>
+            <groupId>fr.cnes.lpisis.cots</groupId>
+            <artifactId>mustache</artifactId>
+        	<version>2.2.1</version>
+            <type>isis-cots</type>
+        </dependency>
+	<dependency>
+            <groupId>fr.cnes.lpisis.cots</groupId>
+            <artifactId>node-uuid</artifactId>
+        	<version>1.4.7</version>
+            <type>isis-cots</type>
+        </dependency>
+	<dependency>
+            <groupId>fr.cnes.lpisis.cots</groupId>
+            <artifactId>postcss</artifactId>
+        	<version>5.2.2</version>
+            <type>isis-cots</type>
+        </dependency>
+	<dependency>
+            <groupId>fr.cnes.lpisis.cots</groupId>
+            <artifactId>react</artifactId>
+        	<version>15.3.2</version>
+            <type>isis-cots</type>
+        </dependency>
+	<dependency>
+            <groupId>fr.cnes.lpisis.cots</groupId>
+            <artifactId>react-bootstrap</artifactId>
+        	<version>0.30.5</version>
+            <type>isis-cots</type>
+        </dependency>
         <dependency>
             <groupId>fr.cnes.lpisis.cots</groupId>
             <artifactId>react-color</artifactId>
-        	<version>2.2.2</version>
+        	<version>2.3.2</version>
             <type>isis-cots</type>
         </dependency>
         <dependency>
             <groupId>fr.cnes.lpisis.cots</groupId>
             <artifactId>react-colorpicker</artifactId>
         	<version>0.3.14</version>
+            <type>isis-cots</type>
+        </dependency>
+	<dependency>
+            <groupId>fr.cnes.lpisis.cots</groupId>
+            <artifactId>react-dom</artifactId>
+        	<version>15.3.2</version>
+            <type>isis-cots</type>
+        </dependency>
+	<dependency>
+            <groupId>fr.cnes.lpisis.cots</groupId>
+            <artifactId>react-grid-layout</artifactId>
+        	<version>0.13.8</version>
+            <type>isis-cots</type>
+        </dependency>
+	<dependency>
+            <groupId>fr.cnes.lpisis.cots</groupId>
+            <artifactId>react-redux</artifactId>
+        	<version>4.4.5</version>
             <type>isis-cots</type>
         </dependency>
         <dependency>
@@ -109,50 +157,8 @@
         </dependency>
         <dependency>
             <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>node-uuid</artifactId>
-        	<version>1.4.7</version>
-            <type>isis-cots</type>
-        </dependency>
-        <dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>postcss</artifactId>
-        	<version>5.2.2</version>
-            <type>isis-cots</type>
-        </dependency>
-        <dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>react</artifactId>
-        	<version>15.3.2</version>
-            <type>isis-cots</type>
-        </dependency>
-        <dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>react-bootstrap</artifactId>
-        	<version>0.30.3</version>
-            <type>isis-cots</type>
-        </dependency>
-        <dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>react-dom</artifactId>
-        	<version>15.3.2</version>
-            <type>isis-cots</type>
-        </dependency>
-        <dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>react-grid-layout</artifactId>
-        	<version>0.13.6</version>
-            <type>isis-cots</type>
-        </dependency>
-        <dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>react-redux</artifactId>
-        	<version>4.4.5</version>
-            <type>isis-cots</type>
-        </dependency>
-        <dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
             <artifactId>react-stockcharts</artifactId>
-        	<version>0.5.0</version>
+        	<version>0.6.0-beta.2</version>
             <type>isis-cots</type>
         </dependency>
         <dependency>
@@ -188,19 +194,13 @@
         <dependency>
             <groupId>fr.cnes.lpisis.cots</groupId>
             <artifactId>updeep</artifactId>
-        	<version>0.16.1</version>
+        	<version>1.0.0</version>
             <type>isis-cots</type>
         </dependency>
 	<dependency>
             <groupId>fr.cnes.lpisis.cots</groupId>
             <artifactId>webpack</artifactId>
         	<version>1.13.2</version>
-            <type>isis-cots</type>
-        </dependency>
-        <dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>ws</artifactId>
-        	<version>1.1.1</version>
             <type>isis-cots</type>
         </dependency>
     </dependencies>
