--- a/GPCCHS_E_VIS/src/common/pom.xml
+++ b/GPCCHS_E_VIS/src/common/pom.xml
@@ -4,12 +4,12 @@
     <groupId>fr.cnes.lpisis.gpcc.js</groupId>
     <artifactId>gpcchs_e_vis_common</artifactId>
     <packaging>isis-js-bundle</packaging>
-    <version>1.1.0-R7S1-SNAPSHOT</version>
+    <version>1.1.0-R7S2-SNAPSHOT</version>
 
     <parent>
         <groupId>fr.cnes.lpisis.gpcc</groupId>
         <artifactId>gpcc-parent</artifactId>
-        <version>1.1.0-R7S1-SNAPSHOT</version>
+        <version>1.1.0-R7S2-SNAPSHOT</version>
         <relativePath />
     </parent>
     
@@ -23,12 +23,28 @@
         <api.main.dir>${api.work.dir}/${artifactId}-${project.version}</api.main.dir>
     </properties>
     <dependencies>
-        
-
-
         <dependency>
-            <groupId>org.sourceforge.pyunit</groupId>
-            <artifactId>COTS-pyunit</artifactId>
+            <groupId>fr.cnes.lpisis.cots</groupId>
+            <artifactId>debug</artifactId>
+        	<version>2.2.0</version>
+            <type>isis-cots</type>
+        </dependency>
+	<dependency>
+            <groupId>fr.cnes.lpisis.cots</groupId>
+            <artifactId>dotenv-safe</artifactId>
+        	<version>2.3.2</version>
+            <type>isis-cots</type>
+        </dependency>
+	<dependency>
+            <groupId>fr.cnes.lpisis.cots</groupId>
+            <artifactId>lodash</artifactId>
+        	<version>4.16.2</version>
+            <type>isis-cots</type>
+        </dependency>
+	<dependency>
+            <groupId>fr.cnes.lpisis.cots</groupId>
+            <artifactId>ws</artifactId>
+        	<version>1.1.1</version>
             <type>isis-cots</type>
         </dependency>
     </dependencies>
