--- a/GPCCHS_E_VIS/src/timebar/src/impl/gpcchs_e_vis/pom.xml
+++ b/GPCCHS_E_VIS/src/timebar/src/impl/gpcchs_e_vis/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" ?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>fr.cnes.lpisis.gpcc</groupId>
-  <artifactId>gpcchs_e_vis-parent</artifactId>
+  <artifactId>gpcchs_e_vis_timebar-parent</artifactId>
   <packaging>pom</packaging>
   <version>1.1.0-R7S2-SNAPSHOT</version>
   <name>${project.groupId}.${project.artifactId}</name>
