[FT:#3737] move common from impl to main

--- a/GPCCHS_E_VIS/src/client/pom.xml
+++ b/GPCCHS_E_VIS/src/client/pom.xml
@@ -25,183 +25,16 @@
     <dependencies>
         <dependency>
             <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>ajv</artifactId>
-        	<version>4.7.4</version>
-            <type>isis-cots</type>
-        </dependency>
-	<dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>babel</artifactId>
-        	<version>6.14.0</version>
-            <type>isis-cots</type>
-        </dependency>
-        <dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>bootstrap</artifactId>
-        	<version>3.3.7</version>
-            <type>isis-cots</type>
-        </dependency>
-        <dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>chai-properties</artifactId>
-        	<version>1.2.1</version>
-            <type>isis-cots</type>
-        </dependency>
-        <dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>css-modules-require-hook</artifactId>
-        	<version>4.0.3</version>
-            <type>isis-cots</type>
-        </dependency>
-        <dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>debug</artifactId>
-        	<version>2.2.0</version>
-            <type>isis-cots</type>
-        </dependency>
-        <dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>deep-diff</artifactId>
-        	<version>0.3.4</version>
-            <type>isis-cots</type>
-        </dependency>
-        <dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>dotenv-safe</artifactId>
-        	<version>2.3.2</version>
-            <type>isis-cots</type>
-        </dependency>
-        <dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>electron-debug</artifactId>
-        	<version>1.0.1</version>
-            <type>isis-cots</type>
-        </dependency>
-        <dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>lodash</artifactId>
-        	<version>4.16.2</version>
-            <type>isis-cots</type>
-        </dependency>
-	<dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>mustache</artifactId>
-        	<version>2.2.1</version>
-            <type>isis-cots</type>
-        </dependency>
-	<dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>node-uuid</artifactId>
-        	<version>1.4.7</version>
-            <type>isis-cots</type>
-        </dependency>
-	<dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>postcss</artifactId>
-        	<version>5.2.2</version>
-            <type>isis-cots</type>
-        </dependency>
-	<dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>react</artifactId>
-        	<version>15.3.2</version>
-            <type>isis-cots</type>
-        </dependency>
-	<dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>react-bootstrap</artifactId>
-        	<version>0.30.5</version>
-            <type>isis-cots</type>
-        </dependency>
-        <dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>react-color</artifactId>
-        	<version>2.3.2</version>
-            <type>isis-cots</type>
-        </dependency>
-        <dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>react-colorpicker</artifactId>
-        	<version>0.3.14</version>
-            <type>isis-cots</type>
-        </dependency>
-	<dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>react-dom</artifactId>
-        	<version>15.3.2</version>
-            <type>isis-cots</type>
-        </dependency>
-	<dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>react-grid-layout</artifactId>
-        	<version>0.13.8</version>
-            <type>isis-cots</type>
-        </dependency>
-	<dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>react-redux</artifactId>
-        	<version>4.4.5</version>
-            <type>isis-cots</type>
-        </dependency>
-        <dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>react-select</artifactId>
-        	<version>1.0.0-rc.2</version>
-            <type>isis-cots</type>
-        </dependency>
-        <dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>react-sizeme</artifactId>
-        	<version>2.2.0</version>
-            <type>isis-cots</type>
-        </dependency>
-        <dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>react-stockcharts</artifactId>
-        	<version>0.6.0-beta.2</version>
-            <type>isis-cots</type>
-        </dependency>
-        <dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>redux</artifactId>
-        	<version>3.6.0</version>
-            <type>isis-cots</type>
-        </dependency>
-        <dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>redux-electron-store</artifactId>
-        	<version>0.3.13</version>
-            <type>isis-cots</type>
-        </dependency>
-        <dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>redux-thunk</artifactId>
-        	<version>2.1.0</version>
-            <type>isis-cots</type>
-        </dependency>
-        <dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>reselect</artifactId>
-        	<version>2.5.4</version>
-            <type>isis-cots</type>
-        </dependency>
-        <dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>source-map-support</artifactId>
-        	<version>0.4.2</version>
-            <type>isis-cots</type>
-        </dependency>
-        <dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>updeep</artifactId>
+            <artifactId>cots-client</artifactId>
         	<version>1.0.0</version>
             <type>isis-cots</type>
         </dependency>
 	<dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>webpack</artifactId>
-        	<version>1.13.2</version>
-            <type>isis-cots</type>
+            <groupId>fr.cnes.lpisis.gpcc.js</groupId>
+            <artifactId>gpcchs_e_vis_common</artifactId>
+        	<version>1.1.0-R7S2-SNAPSHOT</version>
+            <type>isis-js-module-dependency</type>
+            <classifier>unix_dev</classifier>
         </dependency>
     </dependencies>
 </project>
