--- a/GPCCHS_E_VIS/src/server/pom.xml
+++ b/GPCCHS_E_VIS/src/server/pom.xml
@@ -25,99 +25,16 @@
     <dependencies>
         <dependency>
             <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>async</artifactId>
-        	<version>2.0.1</version>
+            <artifactId>cots-server</artifactId>
+        	<version>1.0.0</version>
             <type>isis-cots</type>
         </dependency>
-        <dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>body-parser</artifactId>
-        	<version>1.15.2</version>
-            <type>isis-cots</type>
-        </dependency>
-        <dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>bytebuffer</artifactId>
-        	<version>5.0.1</version>
-            <type>isis-cots</type>
-        </dependency>
-        <dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>debug</artifactId>
-        	<version>2.2.0</version>
-            <type>isis-cots</type>
-        </dependency>
-        <dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>dotenv-safe</artifactId>
-        	<version>2.3.2</version>
-            <type>isis-cots</type>
-        </dependency>
-        <dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>exit</artifactId>
-        	<version>0.1.2</version>
-            <type>isis-cots</type>
-        </dependency>
-        <dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>exit</artifactId>
-        	<version>0.1.2</version>
-            <type>isis-cots</type>
-        </dependency>
-        <dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>express</artifactId>
-        	<version>4.14.0</version>
-            <type>isis-cots</type>
-        </dependency>
-        <dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>lodash</artifactId>
-        	<version>4.16.2</version>
-            <type>isis-cots</type>
-        </dependency>
-        <dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>lokijs</artifactId>
-        	<version>1.4.1</version>
-            <type>isis-cots</type>
-        </dependency>
-        <dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>morgan</artifactId>
-        	<version>1.7.0</version>
-            <type>isis-cots</type>
-        </dependency>
-        <dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>node-uuid</artifactId>
-        	<version>1.4.7</version>
-            <type>isis-cots</type>
-        </dependency>
-        <dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>primus</artifactId>
-        	<version>6.0.5</version>
-            <type>isis-cots</type>
-        </dependency>
-        <dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>protobufjs</artifactId>
-        	<version>5.0.1</version>
-            <type>isis-cots</type>
-        </dependency>
-        <dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>uws</artifactId>
-        	<version>0.10.0</version>
-            <type>isis-cots</type>
-        </dependency>
-        <dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>zmq</artifactId>
-        	<version>2.15.3</version>
-            <type>isis-cots</type>
+	<dependency>
+            <groupId>fr.cnes.lpisis.gpcc.js</groupId>
+            <artifactId>gpcchs_e_vis_common</artifactId>
+        	<version>1.1.0-R7S2-SNAPSHOT</version>
+            <type>isis-js-module-dependency</type>
+            <classifier>unix_dev</classifier>
         </dependency>
     </dependencies>
 </project>
