--- a/GPCCHS_E_VIS/src/common/pom.xml
+++ b/GPCCHS_E_VIS/src/common/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>fr.cnes.lpisis.gpcc.js</groupId>
     <artifactId>gpcchs_e_vis_common</artifactId>
-    <packaging>isis-js-bundle</packaging>
+    <packaging>isis-js-module-dependency</packaging>
     <version>1.1.0-R7S2-SNAPSHOT</version>
 
     <parent>
@@ -25,26 +25,8 @@
     <dependencies>
         <dependency>
             <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>debug</artifactId>
-        	<version>2.2.0</version>
-            <type>isis-cots</type>
-        </dependency>
-	<dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>dotenv-safe</artifactId>
-        	<version>2.3.2</version>
-            <type>isis-cots</type>
-        </dependency>
-	<dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>lodash</artifactId>
-        	<version>4.16.2</version>
-            <type>isis-cots</type>
-        </dependency>
-	<dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>ws</artifactId>
-        	<version>1.1.1</version>
+            <artifactId>cots-common</artifactId>
+        	<version>1.0.0</version>
             <type>isis-cots</type>
         </dependency>
     </dependencies>
