[HL] add a monitoring tool on both sides

--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/.env.example
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/.env.example
@@ -5,3 +5,4 @@ LEVEL=DEBUG
 FMD_ROOT=/data/work/gitRepositories/LPISIS/GPCCHS/GPCCHS_E_VIS/src/client/src/impl/js/client/data
 OPEN=small.workspace.json
 PROFILING=off
+MONITORING=off
