--- a/GPCCHS_E_VIS/src/timebar/src/impl/cpp/standaloneTimeBar/pom.xml
+++ b/GPCCHS_E_VIS/src/timebar/src/impl/cpp/standaloneTimeBar/pom.xml
@@ -7,7 +7,7 @@
   <name>${project.groupId}.${project.artifactId}</name>
   <parent>
     <groupId>fr.cnes.lpisis.gpcc</groupId>
-    <artifactId>gpcchs_e_vis-parent</artifactId>
+    <artifactId>gpcchs_e_vis_timebar-parent</artifactId>
     <version>1.1.0-R7S2-SNAPSHOT</version>
     <relativePath/>
   </parent>
