[FT:#3622] Activate client and server build in maven process

--- a/GPCCHS_E_VIS/src/pom.xml
+++ b/GPCCHS_E_VIS/src/pom.xml
@@ -13,10 +13,11 @@
     <relativePath/>
   </parent>
   <modules>
-<!--    <module>client</module> -->
-<!--    <module>common</module> -->
-<!--    <module>server</module> -->
+    <module>common</module>
+    <module>client</module>
+    <module>server</module>
     <module>timebar</module>
+    <module>launcher</module>
   </modules>
   <build>
     <plugins>
