--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
@@ -90,6 +90,7 @@
     "dotenv-safe": "^2.3.2",
     "electron-debug": "^1.0.1",
     "lodash": "^4.16.2",
+    "moment": "^2.15.2",
     "mustache": "^2.2.1",
     "node-uuid": "^1.4.7",
     "postcss": "^5.2.2",
