--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/.eslintrc
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/.eslintrc
@@ -8,6 +8,7 @@
   },
   "rules": {
     "consistent-return": 0,
+    "no-restricted-syntax": 0,
     "comma-dangle": 0,
     "no-use-before-define": 0,
     "import/no-unresolved": [2, { "ignore": ["electron"] }],
@@ -17,6 +18,7 @@
     "react/prefer-stateless-function": 0,
     "generator-star-spacing": 0,
     "react/forbid-prop-types": 0,
+    "react/no-unused-prop-types": ["warn", { "customValidators": [], "skipShapeProps": true }]
   },
   "plugins": [
     "import",
