[FT:#3622] Fix compilation problems to build rpms from client and server            Move gpcchs launcher tool to the right tools directory

--- a/GPCCHS_E_VIS/src/pom.xml
+++ b/GPCCHS_E_VIS/src/pom.xml
@@ -18,6 +18,7 @@
     <module>server</module>
     <module>timebar</module>
     <module>launcher</module>
+    <module>tools</module>
   </modules>
   <build>
     <plugins>
