--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
@@ -48,6 +48,7 @@
     "chai": "^3.5.0",
     "concurrently": "^3.0.0",
     "css-loader": "^0.25.0",
+    "deep-freeze": "0.0.1",
     "del": "^2.2.2",
     "devtron": "^1.3.0",
     "electron": "^1.4.1",
