--- a/GPCCHS_E_VIS/src/common/pom.xml
+++ b/GPCCHS_E_VIS/src/common/pom.xml
@@ -21,6 +21,7 @@
         <api.lib.dir>${api.target.dir}/lib</api.lib.dir>
         <api.work.dir>${api.target.dir}/work</api.work.dir>
         <api.main.dir>${api.work.dir}/${artifactId}-${project.version}</api.main.dir>
+        <isis.rpm.skip>true</isis.rpm.skip>
     </properties>
     <dependencies>
         <dependency>
